generate first set of plots

--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -6,11 +6,11 @@
    "id": "07ae3738-6ce1-4625-9777-cb42c218896b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-07T20:26:41.904410Z",
-     "iopub.status.busy": "2023-11-07T20:26:41.903775Z",
-     "iopub.status.idle": "2023-11-07T20:26:42.466352Z",
-     "shell.execute_reply": "2023-11-07T20:26:42.464539Z",
-     "shell.execute_reply.started": "2023-11-07T20:26:41.904330Z"
+     "iopub.execute_input": "2023-11-09T20:38:53.041422Z",
+     "iopub.status.busy": "2023-11-09T20:38:53.040883Z",
+     "iopub.status.idle": "2023-11-09T20:38:53.089391Z",
+     "shell.execute_reply": "2023-11-09T20:38:53.087913Z",
+     "shell.execute_reply.started": "2023-11-09T20:38:53.041372Z"
     }
    },
    "outputs": [],
@@ -25,11 +25,11 @@
    "id": "8cf7aaad-086f-40a9-92e4-374d1efb7495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-07T20:26:42.468914Z",
-     "iopub.status.busy": "2023-11-07T20:26:42.468423Z",
-     "iopub.status.idle": "2023-11-07T20:26:44.865583Z",
-     "shell.execute_reply": "2023-11-07T20:26:44.864259Z",
-     "shell.execute_reply.started": "2023-11-07T20:26:42.468867Z"
+     "iopub.execute_input": "2023-11-09T20:38:53.323731Z",
+     "iopub.status.busy": "2023-11-09T20:38:53.323221Z",
+     "iopub.status.idle": "2023-11-09T20:38:55.774496Z",
+     "shell.execute_reply": "2023-11-09T20:38:55.773213Z",
+     "shell.execute_reply.started": "2023-11-09T20:38:53.323684Z"
     }
    },
    "outputs": [],
@@ -54,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1ae98b55-a0e0-4e75-b3f3-b9dcc294234c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-07T20:26:44.867563Z",
-     "iopub.status.busy": "2023-11-07T20:26:44.867184Z",
-     "iopub.status.idle": "2023-11-07T20:26:44.888497Z",
-     "shell.execute_reply": "2023-11-07T20:26:44.887326Z",
-     "shell.execute_reply.started": "2023-11-07T20:26:44.867535Z"
+     "iopub.execute_input": "2023-11-09T20:39:34.399369Z",
+     "iopub.status.busy": "2023-11-09T20:39:34.398935Z",
+     "iopub.status.idle": "2023-11-09T20:39:34.950392Z",
+     "shell.execute_reply": "2023-11-09T20:39:34.948707Z",
+     "shell.execute_reply.started": "2023-11-09T20:39:34.399329Z"
     }
    },
    "outputs": [],
@@ -92,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "462240d3-88c1-461a-bcbd-22f0585387f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T22:02:52.334858Z",
-     "iopub.status.busy": "2023-11-06T22:02:52.334621Z",
-     "iopub.status.idle": "2023-11-06T22:02:52.357738Z",
-     "shell.execute_reply": "2023-11-06T22:02:52.356043Z",
-     "shell.execute_reply.started": "2023-11-06T22:02:52.334842Z"
+     "iopub.execute_input": "2023-11-09T20:39:38.675287Z",
+     "iopub.status.busy": "2023-11-09T20:39:38.674765Z",
+     "iopub.status.idle": "2023-11-09T20:39:38.706613Z",
+     "shell.execute_reply": "2023-11-09T20:39:38.704794Z",
+     "shell.execute_reply.started": "2023-11-09T20:39:38.675236Z"
     }
    },
    "outputs": [],
@@ -112,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "4108629a-beb2-44ba-94a2-634f69a44dad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T22:02:54.009721Z",
-     "iopub.status.busy": "2023-11-06T22:02:54.009221Z",
-     "iopub.status.idle": "2023-11-06T22:02:54.064799Z",
-     "shell.execute_reply": "2023-11-06T22:02:54.063275Z",
-     "shell.execute_reply.started": "2023-11-06T22:02:54.009680Z"
+     "iopub.execute_input": "2023-11-09T20:39:39.072651Z",
+     "iopub.status.busy": "2023-11-09T20:39:39.072145Z",
+     "iopub.status.idle": "2023-11-09T20:39:39.168628Z",
+     "shell.execute_reply": "2023-11-09T20:39:39.167173Z",
+     "shell.execute_reply.started": "2023-11-09T20:39:39.072601Z"
     }
    },
    "outputs": [],
@@ -133,15 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "b08a969c-fd99-4dae-ae15-041f5be159f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T22:02:55.778020Z",
-     "iopub.status.busy": "2023-11-06T22:02:55.776598Z",
-     "iopub.status.idle": "2023-11-06T22:02:57.050762Z",
-     "shell.execute_reply": "2023-11-06T22:02:57.049162Z",
-     "shell.execute_reply.started": "2023-11-06T22:02:55.777956Z"
+     "iopub.execute_input": "2023-11-09T20:39:40.733023Z",
+     "iopub.status.busy": "2023-11-09T20:39:40.731682Z",
+     "iopub.status.idle": "2023-11-09T20:39:41.661235Z",
+     "shell.execute_reply": "2023-11-09T20:39:41.659712Z",
+     "shell.execute_reply.started": "2023-11-09T20:39:40.732952Z"
     }
    },
    "outputs": [],
@@ -1040,14 +1040,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd6d22ef-3464-4c89-94ce-e357e6607a81",
-   "metadata": {},
+   "execution_count": 46,
+   "id": "d4a17a46-2d52-4a78-a910-95b86d846fb3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T21:06:10.050611Z",
+     "iopub.status.busy": "2023-11-09T21:06:10.050020Z",
+     "iopub.status.idle": "2023-11-09T21:06:11.028142Z",
+     "shell.execute_reply": "2023-11-09T21:06:11.026419Z",
+     "shell.execute_reply.started": "2023-11-09T21:06:10.050561Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# need to process these all at the county level\n",
-    "# sovi is in VULN_DIR_UZ/social/{STATEABBR}/SoVI2010_{STATEABBR}/...\n",
-    "# can glob for .shp (no .shp.xml)"
+    "# Load relevant spatial data (tract, block group)\n",
+    "tract_filep = join(REF_DIR_I, FIPS, 'tract.gpkg')\n",
+    "bg_filep = join(REF_DIR_I, FIPS, 'bg.gpkg')\n",
+    "tract_geo = gpd.read_file(tract_filep)\n",
+    "bg_geo = gpd.read_file(bg_filep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ca5d827b-3879-4e5a-a544-90091475a965",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T21:06:11.030906Z",
+     "iopub.status.busy": "2023-11-09T21:06:11.030475Z",
+     "iopub.status.idle": "2023-11-09T21:06:12.439737Z",
+     "shell.execute_reply": "2023-11-09T21:06:12.438057Z",
+     "shell.execute_reply.started": "2023-11-09T21:06:11.030865Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2178006/1658044816.py:3: DtypeWarning: Columns (18,26,70,72,85,131) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  cejst = pd.read_csv(ce_filep, dtype={'Census tract 2010 ID': 'str'})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CEJST data\n",
+    "ce_filep = join(VULN_DIR_R, 'social', NATION, 'cejst.csv')\n",
+    "cejst = pd.read_csv(ce_filep, dtype={'Census tract 2010 ID': 'str'})\n",
+    "\n",
+    "# Columns to keep\n",
+    "# Identified as disadvantaged\n",
+    "# Census tract 2010 ID\n",
+    "keep_cols = ['Census tract 2010 ID', 'Identified as disadvantaged']\n",
+    "cejst_sub = cejst[keep_cols]\n",
+    "# Rename columns\n",
+    "cejst_sub.columns = ['GEOID', 'disadvantaged']\n",
+    "\n",
+    "# Merge with tract_geo\n",
+    "cejst_f = tract_geo[['GEOID', 'geometry']].merge(cejst_sub,\n",
+    "                                                 on='GEOID',\n",
+    "                                                 how='inner')\n",
+    "\n",
+    "# Write file\n",
+    "cejst_out_filep = join(VULN_DIR_I, 'social', FIPS, 'cejst.gpkg')\n",
+    "prepare_saving(cejst_out_filep)\n",
+    "cejst_f.to_file(cejst_out_filep, driver='GPKG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "72b8abed-5fa4-4e90-99cc-c6ff83beede1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T21:50:12.413506Z",
+     "iopub.status.busy": "2023-11-09T21:50:12.412945Z",
+     "iopub.status.idle": "2023-11-09T21:50:14.175267Z",
+     "shell.execute_reply": "2023-11-09T21:50:14.173683Z",
+     "shell.execute_reply.started": "2023-11-09T21:50:12.413457Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# NJ overburdened data\n",
+    "\n",
+    "# Read data\n",
+    "ovb_filep = join(VULN_DIR_R, 'social', STATEABBR, 'overburdened.gpkg')\n",
+    "ovb = gpd.read_file(ovb_filep)\n",
+    "\n",
+    "# Remove \"properties\" from columns\n",
+    "col_updates = [x.replace(\"properties.\", \"\") for x in ovb.columns]\n",
+    "ovb.columns = col_updates\n",
+    "\n",
+    "# Rename some columns\n",
+    "ovb = ovb.rename(columns={'OVERBURDENED_COMMUNITY_CRITERI': 'ovb_crit'})\n",
+    "\n",
+    "# Keep a subset of columns\n",
+    "ovb_f = ovb[['GEOID', 'ovb_crit', 'geometry']]\n",
+    "\n",
+    "# Write file\n",
+    "ovb_out_filep = join(VULN_DIR_I, 'social', FIPS, 'ovb.gpkg')\n",
+    "ovb_f.to_file(ovb_out_filep, driver='GPKG')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ad2c5e50-cae9-4bd0-87d9-475a3ea93609",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T21:06:25.612029Z",
+     "iopub.status.busy": "2023-11-09T21:06:25.611463Z",
+     "iopub.status.idle": "2023-11-09T21:06:29.617984Z",
+     "shell.execute_reply": "2023-11-09T21:06:29.617016Z",
+     "shell.execute_reply.started": "2023-11-09T21:06:25.611981Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# NOAA SOVI data\n",
+    "sovi_suffix = 'SoVI2010_' + STATEABBR\n",
+    "sovi_filename = 'SoVI0610_' + STATEABBR + '.shp'\n",
+    "sovi_filep = join(VULN_DIR_UZ, 'social', STATEABBR,\n",
+    "                  sovi_suffix, sovi_filename)\n",
+    "sovi = gpd.read_file(sovi_filep)\n",
+    "\n",
+    "# Subset to threshhold for FMA (from 2022 NOFO)\n",
+    "sovi_high = sovi[sovi['SOVI0610' + STATEABBR] > .75]\n",
+    "\n",
+    "# Subset columns\n",
+    "keep_cols = ['GEOID10', 'SOVI0610_1', 'SOVI0610_2']\n",
+    "sovi_high = sovi_high[keep_cols]\n",
+    "\n",
+    "# Rename GEOID10 to GEOID\n",
+    "sovi_high = sovi_high.rename(columns={'GEOID10': 'GEOID'})\n",
+    "\n",
+    "# Subset to tracts in our study area (using the tract_geo geometries)\n",
+    "sovi_f = tract_geo[['GEOID', 'geometry']].merge(sovi_high,\n",
+    "                                                on='GEOID',\n",
+    "                                                how='inner')\n",
+    "\n",
+    "# Write out file\n",
+    "sovi_out_filep = join(VULN_DIR_I, 'social', FIPS, 'sovi.gpkg')\n",
+    "sovi_f.to_file(sovi_out_filep, driver='GPKG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6c10c115-8995-4da8-80fb-6f69d9f60b96",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T21:23:56.660468Z",
+     "iopub.status.busy": "2023-11-09T21:23:56.660234Z",
+     "iopub.status.idle": "2023-11-09T21:24:22.353979Z",
+     "shell.execute_reply": "2023-11-09T21:24:22.353247Z",
+     "shell.execute_reply.started": "2023-11-09T21:23:56.660450Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# LMI data\n",
+    "# Read data\n",
+    "lmi_filename = 'ACS_2015_lowmod_blockgroup_all.xlsx'\n",
+    "lmi_filep = join(VULN_DIR_R, 'social', NATION, lmi_filename)\n",
+    "lmi = pd.read_excel(lmi_filep, engine='openpyxl')\n",
+    "# Get GEOID for merge (last 12 characters is the bg id)\n",
+    "lmi['GEOID'] = lmi['GEOID'].str[-12:]\n",
+    "\n",
+    "# Retain GEOID and Lowmod_pct\n",
+    "keep_cols = ['GEOID', 'Lowmod_pct']\n",
+    "lmi_f = bg_geo[['GEOID', 'geometry']].merge(lmi[keep_cols],\n",
+    "                                            on='GEOID',\n",
+    "                                            how='inner')\n",
+    "\n",
+    "# Write file\n",
+    "lmi_out_filep = join(VULN_DIR_I, 'social', FIPS, 'lmi.gpkg')\n",
+    "lmi_f.to_file(lmi_out_filep, driver='GPKG')"
    ]
   },
   {
@@ -1231,22 +1400,6 @@
     "nsi_refs.to_parquet(ref_filep)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8110e1bc-8f47-49c3-9f68-89247784d83c",
-   "metadata": {},
-   "source": [
-    "## Link NSI with Social Vulnerability Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4891c8d6-8b60-460d-acda-82a09febfa2f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
