--- a/workflow/notebooks/process_haz.ipynb
+++ b/workflow/notebooks/process_haz.ipynb
@@ -6,11 +6,11 @@
    "id": "8127ac76-50ac-4a49-b1a6-2ff4d124bca1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T19:02:13.461712Z",
-     "iopub.status.busy": "2023-10-22T19:02:13.460706Z",
-     "iopub.status.idle": "2023-10-22T19:02:13.760942Z",
-     "shell.execute_reply": "2023-10-22T19:02:13.759849Z",
-     "shell.execute_reply.started": "2023-10-22T19:02:13.461661Z"
+     "iopub.execute_input": "2023-11-08T17:50:00.545667Z",
+     "iopub.status.busy": "2023-11-08T17:50:00.545127Z",
+     "iopub.status.idle": "2023-11-08T17:50:01.061976Z",
+     "shell.execute_reply": "2023-11-08T17:50:01.060231Z",
+     "shell.execute_reply.started": "2023-11-08T17:50:00.545614Z"
     }
    },
    "outputs": [],
@@ -25,11 +25,11 @@
    "id": "66c50021-e313-4b5c-8978-c41bb4b28bcd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T19:02:13.772703Z",
-     "iopub.status.busy": "2023-10-22T19:02:13.771732Z",
-     "iopub.status.idle": "2023-10-22T19:02:43.405007Z",
-     "shell.execute_reply": "2023-10-22T19:02:43.403692Z",
-     "shell.execute_reply.started": "2023-10-22T19:02:13.772654Z"
+     "iopub.execute_input": "2023-11-08T17:50:01.064341Z",
+     "iopub.status.busy": "2023-11-08T17:50:01.063877Z",
+     "iopub.status.idle": "2023-11-08T17:50:05.904001Z",
+     "shell.execute_reply": "2023-11-08T17:50:05.902159Z",
+     "shell.execute_reply.started": "2023-11-08T17:50:01.064294Z"
     }
    },
    "outputs": [],
@@ -55,11 +55,11 @@
    "id": "3535d05c-7fef-4b4e-ad55-6abb0d8b3feb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T19:02:43.408277Z",
-     "iopub.status.busy": "2023-10-22T19:02:43.407437Z",
-     "iopub.status.idle": "2023-10-22T19:02:43.572530Z",
-     "shell.execute_reply": "2023-10-22T19:02:43.571399Z",
-     "shell.execute_reply.started": "2023-10-22T19:02:43.408224Z"
+     "iopub.execute_input": "2023-11-08T17:50:05.906837Z",
+     "iopub.status.busy": "2023-11-08T17:50:05.906181Z",
+     "iopub.status.idle": "2023-11-08T17:50:05.938785Z",
+     "shell.execute_reply": "2023-11-08T17:50:05.937032Z",
+     "shell.execute_reply.started": "2023-11-08T17:50:05.906786Z"
     }
    },
    "outputs": [],
@@ -85,11 +85,11 @@
    "id": "f8eabf98-c186-4c36-a7ab-ef7457ac7923",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T19:03:07.162685Z",
-     "iopub.status.busy": "2023-10-22T19:03:07.161478Z",
-     "iopub.status.idle": "2023-10-22T19:03:12.597285Z",
-     "shell.execute_reply": "2023-10-22T19:03:12.596553Z",
-     "shell.execute_reply.started": "2023-10-22T19:03:07.162627Z"
+     "iopub.execute_input": "2023-11-08T17:50:05.940876Z",
+     "iopub.status.busy": "2023-11-08T17:50:05.940463Z",
+     "iopub.status.idle": "2023-11-08T17:50:10.667551Z",
+     "shell.execute_reply": "2023-11-08T17:50:10.665925Z",
+     "shell.execute_reply.started": "2023-11-08T17:50:05.940835Z"
     }
    },
    "outputs": [],
@@ -121,11 +121,11 @@
    "id": "1157ff6d-a80f-4b5d-b69c-21f3d5b76391",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T19:03:37.273125Z",
-     "iopub.status.busy": "2023-10-22T19:03:37.272616Z",
-     "iopub.status.idle": "2023-10-22T19:03:58.902306Z",
-     "shell.execute_reply": "2023-10-22T19:03:58.901065Z",
-     "shell.execute_reply.started": "2023-10-22T19:03:37.273091Z"
+     "iopub.execute_input": "2023-11-08T17:50:10.670374Z",
+     "iopub.status.busy": "2023-11-08T17:50:10.669906Z",
+     "iopub.status.idle": "2023-11-08T17:50:10.700929Z",
+     "shell.execute_reply": "2023-11-08T17:50:10.699683Z",
+     "shell.execute_reply.started": "2023-11-08T17:50:10.670343Z"
     }
    },
    "outputs": [
@@ -152,11 +152,11 @@
    "id": "e4d30e70-f0f2-4ce9-b504-0d424e0a4499",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T19:06:13.589782Z",
-     "iopub.status.busy": "2023-10-22T19:06:13.588871Z",
-     "iopub.status.idle": "2023-10-22T19:16:20.418935Z",
-     "shell.execute_reply": "2023-10-22T19:16:20.418156Z",
-     "shell.execute_reply.started": "2023-10-22T19:06:13.589730Z"
+     "iopub.execute_input": "2023-11-08T17:50:10.702657Z",
+     "iopub.status.busy": "2023-11-08T17:50:10.702329Z",
+     "iopub.status.idle": "2023-11-08T17:59:19.522866Z",
+     "shell.execute_reply": "2023-11-08T17:59:19.522090Z",
+     "shell.execute_reply.started": "2023-11-08T17:50:10.702625Z"
     },
     "scrolled": true
    },
@@ -166,147 +166,147 @@
      "output_type": "stream",
      "text": [
       "Read in 001 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 001 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 001 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 002 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 002 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 002 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 005 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 005 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 005 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 010 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 010 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 010 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 015 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 015 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 015 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 020 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 020 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 020 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 025 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 025 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 025 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 050 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 050 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 050 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 075 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 075 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 075 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 100 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 100 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 100 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 200 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 200 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 200 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 500 RP depth grid for Lower percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 500 RP depth grid for Mid percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n",
       "Read in 500 RP depth grid for Upper percentile\n",
-      "Sampled depth from grid:\n",
+      "Sampled depths from grid\n",
       "Added depths to list\n",
       "\n"
      ]
@@ -351,15 +351,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "7804506c-2ad8-459d-9cbc-f0e0cf64cbae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T20:06:39.276554Z",
-     "iopub.status.busy": "2023-10-22T20:06:39.275473Z",
-     "iopub.status.idle": "2023-10-22T20:06:39.741157Z",
-     "shell.execute_reply": "2023-10-22T20:06:39.740022Z",
-     "shell.execute_reply.started": "2023-10-22T20:06:39.276505Z"
+     "iopub.execute_input": "2023-11-08T17:59:19.523793Z",
+     "iopub.status.busy": "2023-11-08T17:59:19.523663Z",
+     "iopub.status.idle": "2023-11-08T17:59:20.163008Z",
+     "shell.execute_reply": "2023-11-08T17:59:20.161305Z",
+     "shell.execute_reply.started": "2023-11-08T17:59:19.523780Z"
     }
    },
    "outputs": [],
@@ -367,7 +367,7 @@
     "# Replace nodata values with 0\n",
     "depth_df[depth_df == dg.nodata] = 0\n",
     "\n",
-    "# Retain only structures with sum flood exposure\n",
+    "# Retain only structures with some flood exposure\n",
     "depth_df_f = depth_df[depth_df.sum(axis=1) > 0]\n",
     "\n",
     "# Multiply by MTR_TO_FT to convert to feet\n",
@@ -376,15 +376,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "c982853b-fa68-41b4-b201-3429c2b5da7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-22T20:08:13.047074Z",
-     "iopub.status.busy": "2023-10-22T20:08:13.045800Z",
-     "iopub.status.idle": "2023-10-22T20:08:14.464861Z",
-     "shell.execute_reply": "2023-10-22T20:08:14.463856Z",
-     "shell.execute_reply.started": "2023-10-22T20:08:13.047029Z"
+     "iopub.execute_input": "2023-11-08T17:59:25.330569Z",
+     "iopub.status.busy": "2023-11-08T17:59:25.330272Z",
+     "iopub.status.idle": "2023-11-08T17:59:25.691089Z",
+     "shell.execute_reply": "2023-11-08T17:59:25.689575Z",
+     "shell.execute_reply.started": "2023-11-08T17:59:25.330545Z"
     }
    },
    "outputs": [],
@@ -392,11 +392,20 @@
     "# Write out dataframe that links fd_id to depths\n",
     "# with columns corresponding to RETPER_PCTILE (i.e. 500_Mid)\n",
     "nsi_depths_out = join(EXP_DIR_I, FIPS, 'nsi_depths.pqt')\n",
-    "# Round to nearest foot\n",
+    "# Round to nearest hundredth foot\n",
     "# Depth-damage functions don't have nearly the precision\n",
-    "# to make use of inches differences\n",
-    "depth_df_f.reset_index().to_parquet(nsi_depths_out.round())"
+    "# to make use of inches differences, but some precision\n",
+    "# is needed for subtracting first floor elevation before rounding\n",
+    "depth_df_f.round(2).reset_index().to_parquet(nsi_depths_out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db8c2bf5-07f8-4739-b713-e3c42b7fcc29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
